src/App.scss
 .app {
    position: relative;
    .collapse {
        color: #fff;
        font-size: 35px;
        position: absolute;
        display: none;
        top: 15px;
        left: 5px;
        cursor: pointer;
    }
    &__navbar {
        flex: 20%;
        background-color: #191d2b;
        height: 100vh;
        color: #8a91a7;
        display: flex;
        flex-direction: column;
        position: fixed;
        width: 250px;
        z-index: 100;
        top: 0;
        transition: all .4s linear;
        
        &.show {
            transform: translateX(0) !important;
            width: 60%;

            .navbar__image img{
                width: 170px;
                height: 170px;
            }

            .close-btn {
                display: block;
            }
        }

        &.hide {
            transform: translateX(-100%) !important;

            .collapse {
                display: none;
            }

            .navbar__image img{
                width: 170px;
                height: 170px;
            }
        }
        
        .close-btn {
            color: #fff;
            font-size: 35px;
            position: absolute;
            display: none;
            top: 15px;
            right: -30px;
            cursor: pointer;
            position: absolute;
        }

        .navbar__image {
            flex: 20%;
            display: flex;
            justify-content: center;
            align-items: center;
            height: 300px;
            border-bottom: 1px solid #2e344e;
            box-sizing: border-box;
            img {
                box-sizing: border-box;
                background-image: url(./image/avatar.jpg);
                border-radius: 50%;
                margin: 10px 0;
                border: 7px solid #2e344e;
                width: 200px;
                height: 200px;
                cursor: pointer;
                background-size: cover;
                background-position: center;
            }
        }

        .navbar__menu {
            flex: 70%;
            display: flex;
            justify-content: center;
            align-items: center;
            width: 100%;
            border-bottom:  1px solid #2e344e;
            .menu__list-item {
                line-height: 3rem;
                font-size: 15px;
                transition: all .3s;
                display: flex;
                flex-direction: column;
                text-transform: uppercase;
                a {
                    color: #a4acc4;
                    text-decoration: none;
                    text-align: center;
                    transition: all .3s;
                }
                
                a:after {
                    content: '';
                    width: 0px;
                    height: 1px;
                    background: #738be4;
                    transition: .4s;
                    display: block;
                }

                a:hover {
                    color: #738be4;
                    transform: translateY(-10px);
                }

                a:hover:after {
                    width: 100%;
                }
            }
        }

        .nav__footer {
            flex: 10%;
            display: flex;
            align-items: center;
            justify-content: center;
        }
    }

    &__main-content {
        flex: 80%;
        margin-left: 260px;
        box-sizing: border-box;
    }

    .home-content {
        color:#fff;
        font-size: 25px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100vh;
        text-align: center;

        &__hello span {
            color:hsl(210, 100%, 51%);
        }

        &__intro {
            font-size: 20px;
        }

        &__social-icons {
            list-style: none;
            li {
                display: inline-block;
                margin: 0 15px;
                border: 2px rgb(156, 118, 118) solid;
                width: 40px;
                height: 40px;
                border-radius: 50%;
                transition: transform .4s;

                i {
                    margin: 0 auto;
                    color: #fff;
                    transform: translateY(5px);
                }
            }
            li:hover {
                transform: scale(1.5,1.5);
            }
        }
    }

    .main-content__about {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        font-size: 20px;
        color: #fff;
    }

    @media screen and (max-width: 492px) {
        .app__navbar {
            transform: translateX(-100%);
        }

        .collapse {
            display: inline;
            z-index: 2;
        }

        .app__main-content {
            margin: auto;
        }

        .close-btn {
            display: none;
        }
    }
}

